# phono3py-wte

./: pyproject.toml
tests/: test.py
tests/data/: copper-fc2.hdf5  copper-phonopy.yaml
