[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "phono3py-wte"
version = "0.1.0"
description = "Wigner transport equation plugin for phono3py"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Michele Simoncelli", email = "michele.simoncelli@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "phonopy",
    "phono3py",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/MSimoncelli/phono3py-wte"
Repository = "https://github.com/MSimoncelli/phono3py-wte"

[project.entry-points."phono3py.conductivity"]
WTE = "wte:register"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["wte*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
